# Electrodynamics_II

./: .gitignore  README.md  pyproject.toml  run_simulation.py
config/: requirements.txt
datasets/two_terminal_1gap_sweep/: bias_0000.npz  bias_0001.npz  bias_0002.npz  bias_0003.npz  bias_0004.npz  bias_0005.npz  bias_0006.npz  bias_0007.npz  bias_0008.npz  bias_0009.npz  bias_0010.npz  bias_0011.npz  bias_0012.npz  bias_0013.npz  bias_0014.npz  bias_0015.npz  bias_0016.npz  bias_0017.npz  bias_0018.npz  bias_0019.npz  bias_0020.npz  bias_0021.npz  bias_0022.npz  bias_0023.npz  bias_0024.npz  bias_0025.npz  bias_0026.npz  bias_0027.npz  bias_0028.npz  bias_0029.npz  bias_0030.npz  bias_0031.npz  bias_0032.npz  bias_0033.npz  bias_0034.npz  bias_0035.npz  bias_0036.npz  bias_0037.npz  bias_0038.npz  bias_0039.npz  (+560 more)
datasets/two_terminal_sweep/: bias_0000.npz  bias_0001.npz  bias_0002.npz  bias_0003.npz  bias_0004.npz  bias_0005.npz  bias_0006.npz  bias_0007.npz  bias_0008.npz  bias_0009.npz  bias_0010.npz  bias_0011.npz  bias_0012.npz  bias_0013.npz  bias_0014.npz  bias_0015.npz  bias_0016.npz  bias_0017.npz  bias_0018.npz  bias_0019.npz  bias_0020.npz  bias_0021.npz  bias_0022.npz  bias_0023.npz  bias_0024.npz  bias_0025.npz  bias_0026.npz  bias_0027.npz  bias_0028.npz  bias_0029.npz  bias_0030.npz  bias_0031.npz  bias_0032.npz  bias_0033.npz  bias_0034.npz  bias_0035.npz  bias_0036.npz  bias_0037.npz  bias_0038.npz  bias_0039.npz  (+560 more)
notebooks/: 2sources_1gap_clean.ipynb  2sources_2gap_clean.ipynb  2sources_clean.ipynb  H_sweep_nogap.ipynb  R_sweep.ipynb
